# wiz

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  a.go  a.py  ah_included_profitable_items.json  backupbz.py  bazaar_profitable_items.json  bz.go  bz.py  check_dependencies.py  craftflip.py  data.json  feather.py  gg.py  go.mod  go.sum  info.json  install.py  list.go  list.py  main.go  package-lock.json  recipe.html  recipe.py  requirements-analysis.txt  requirements-bot.txt  requirements-dev.txt  requirements.txt  shard.py  shard2.py  topflips.py  validate_fix.py  wiz.html
backend/: .env  Dockerfile  Dockerfile.koyeb  craftflip.py  docker-compose.yml  heap_after_changes.prof  remote-ls.sh  session-keeper.sh  shell-with-login.sh  supervisor.conf  supervisord.conf
backend/server9/: Cargo.toml  Dockerfile  export.cpp  koyeb.toml  koyeb.yml  start.sh
backend/server9/.github/workflows/: keep-alive.yml
backend/server9/src/: main.rs
backend/testing/testserver/: .railwayignore  Cargo.toml  railway.toml
backend/testing/testserver/src/: main.rs
backend/testing/testserver/src/.cargo/: config.toml
bazaar-backend/: api.go  c10m.go  expansion.go  fill_time.go  latest_metrics.json  main.go  optimizer.go  recipe.go
bazaar-frontend/: package-lock.json  package.json
bot-test/: fusion_list.csv
calculation_engine/: api.go  c10m.go  expansion.go  fill_time.go  go.mod  latest_metrics.json  main.go  metrics.go  optimizer.go  utils.go
exports/: ah_included_profitable_items.json  bazaar_profitable_items.json
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
fusion_dashboard/: run_dashboard.sh  shard3.py  shard4.py
info/: metrics_20250628020222.json  metrics_20250628030231.json  metrics_20250628040233.json  metrics_20250628050237.json  metrics_20250628060238.json  metrics_20250628070241.json  (+17 more)
(+152 files in other folders)
