[package]
name = "timestamp_generator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "timestamp_generator"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false } # Use rustls-tls
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"