[package]
name = "timestamp_generator" # Or metrics_generator, ensure consistency
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timestamp_generator" # Or metrics_generator
path = "src/main.rs"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"