[package]
name = "rust-railway-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-railway-server"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
